--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ Open the gift for me!</p>
       <div class="flex justify-center gap-4 mb-6 animate-fade-in-up" style="animation-delay:0.7s">
         <span class="pulse-besar-kecil text-3xl sm:text-4xl mb-4" style="animation-delay: 0.2s">🤲</span>
       </div>
-      <button class="btn-next animate-fade-in-up" style="animation-delay:0.8s" onclick="closeCard()">Tutup</button>
+      <button class="btn-next animate-fade-in-up" style="animation-delay:0.8s" onclick="closeCard()">Udah itu aja By By</button>
     </div>
   </div>
 
